objects/CSAPEN_Cisco_Strategic_Goal_Objective__c.object
<CustomObject>
    <fields>
        <fullName>CSAPEN_Cisco_Strategic_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>lookup relationship between strategic goal and objective</description>
        <label>Cisco Strategic Goal</label>
        <referenceTo>CSAPEN_Cisco_Strategic_Goal__c</referenceTo>
        <relationshipName>R00N30000001WkTqEAK</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_Source_Name__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Data Source Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_No__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Deployment No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objective_Description__c</fullName>
        <description>A more detailed description of the Cisco Strategic Goal Objective.</description>
        <label>Objective Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Objective_Result__c</fullName>
        <description>The end result of the objective</description>
        <label>Objective Result</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>Capture other relevant information related to Cisco Strategic Goal Objective.</description>
        <label>Other Information</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_URL__c</fullName>
        <description>Capture a URL relevant to the Cisco Strategic Goal Objective.</description>
        <label>Other URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Performance_Measurement__c</fullName>
        <description>How will the objective be measured as successful</description>
        <label>Performance Measurement</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <description>for which quarter is the objective applicable</description>
        <label>Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Cisco_Strat_Goal_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Cisco Strat Goal Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Cisco_Strat_Goal_Obj_Id__c</fullName>
        <description>Data Migration Field: Used to generate reports, rollback data changes, mass data changes in SFDC etc</description>
        <label>Source Cisco Strat Goal Obj Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>what is the status for this objective</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Met</fullName>
                </value>
                <value>
                    <fullName>Not Met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>The objectives for Account Planning strategic goals</description>
    <label>zzCisco Strategic Goal Objective</label>
    <nameField>
        <label>Cisco Strategic Goal Objective</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cisco Strategic Goal Objectives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>